fixed forms alignment

--- a/src/components/StepForm/StepForm.module.scss
+++ b/src/components/StepForm/StepForm.module.scss
@@ -37,5 +37,5 @@
 .form {
   grid-area: form;
 
-  display: flex;
+  display: grid;
 }
